Fix align center for item component

--- a/src/components/item/item.scss
+++ b/src/components/item/item.scss
@@ -41,7 +41,7 @@
     text-align: right;
   }
 
-  &--align-center &__content {
+  &--align-center {
     align-items: center;
   }
 
